--- a/src/App.css
+++ b/src/App.css
@@ -19,17 +19,18 @@ background: -webkit-linear-gradient(to right, #004e92, #000428);  /* Chrome 10-2
 background: linear-gradient(to right, #004e92, #000428); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.texto_header{
+  margin-top: 5px;
+  font-family: arial; 
+  
 }
+
+
 
 @keyframes App-logo-spin {
   from {
